--- a/projects.html
+++ b/projects.html
@@ -9,11 +9,15 @@
     
     }
    
+	  .about_me_text_container{
+		display: none;
+	  }
+		
        .skills_text{
            display: none;
        }
        .projects_text{
-           display: none;
+           display: block;
        }
     .contact_me_text{
            display: none;
@@ -86,18 +90,18 @@
     <!-- nav aka menu -->
     <div id="menu_pop_container" class="menu_pop_container">
   
-    <div id="menu_pop" class="menu_pop"> 
+ <div id="menu_pop" class="menu_pop"> 
         <div id="about_me" class="about_me">
-                <p> About me
+            <p> <a href="index.html">About me</a>
         </div>
         <div id="skills" class="skills">
-                 <p>Skills</p>
+            <p><a href="skills.html">Skills</a></p>
         </div>
         <div id="projects" class="projects">
-                 <p>Projects</p>
+            <p><a href="projects.html">Projects</a></p>
         </div>
         <div id="contact_me" class="contact_me">
-                 <p>Contact me</p>
+            <p><a href="contactme.html">Contact me</a></p>
         </div>
     </div>
     
